syntax = "proto3";

package auth;

// Сообщение для отправки данных для логина
message LoginRequest {
  string username = 1;  // Имя пользователя
  string password = 2;  // Пароль пользователя
  optional string email = 3;
}

// Сообщение для ответа на запрос логина
message LoginResponse {
  string access_token = 1;  // Токен для аутентификации (JWT или другой)
  string refresh_token = 2;  // Рефреш-токен для обновления доступа
  bool success = 3;  // Успешность логина
  string message = 4;  // Сообщение об ошибке или успехе
  UserInfoResponse user = 5;
}

// Сообщение для регистрации нового пользователя
message RegisterRequest {
  string username = 1;  // Имя пользователя
  string password = 2;  // Пароль
  string email = 3;     // Электронная почта
}

// Ответ на запрос регистрации
message RegisterResponse {
  bool success = 1;     // Успешность регистрации
  string message = 2;   // Сообщение об ошибке или успехе
  string access_token = 3; // токен
  string refresh_token = 4;  // Рефреш-токен для обновления доступа
  UserInfoResponse user = 5;
}

// Сообщение для рефреша токена
message RefreshTokenRequest {
  string refreshToken = 1;  // Токен для проверки
}

// Ответ на запрос рефреша токена
message RefreshTokenResponse {
  bool valid = 1;     // Является ли токен действительным
  string message = 2; // Сообщение о статусе токена
  string access_token = 3;  // Токен для аутентификации (JWT или другой)
  string refresh_token = 4;  // Рефреш-токен для обновления доступа
}

// Сообщение для запроса на выход (logout)
message LogoutRequest {
  string token = 1;  // Токен, который нужно отозвать
}

// Ответ на запрос выхода
message LogoutResponse {
  bool success = 1;   // Успешность выхода
  string message = 2; // Сообщение
}

// Сообщение для изменения пароля
message ChangePasswordRequest {
  string username = 1;   // Имя пользователя
  string old_password = 2;  // Старый пароль
  string new_password = 3;  // Новый пароль
}

// Ответ на запрос изменения пароля
message ChangePasswordResponse {
  bool success = 1;   // Успешность изменения пароля
  string message = 2; // Сообщение
}

// Сообщение для получения данных пользователя
message UserInfoRequest {
  string username = 1;  // Имя пользователя
  string id = 2;
  string email = 3;
}

// Ответ на запрос получения информации о пользователе
message UserInfoResponse {
  string username = 1;  // Имя пользователя
  string email = 2;     // Электронная почта
  string created_at = 3; // Дата создания аккаунта
  string id = 4;
}

// Сервис аутентификации и авторизации
service AuthService {
  // Метод для логина
  rpc Login(LoginRequest) returns (LoginResponse);

  // Метод для регистрации
  rpc Register(RegisterRequest) returns (RegisterResponse);

  // Метод для рефреша access токена и обновления рефреш токена
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);

  // Метод для выхода из системы
  rpc Logout(LogoutRequest) returns (LogoutResponse);

  // Метод для изменения пароля
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);

  // Метод для получения информации о пользователе
  rpc UserInfo(UserInfoRequest) returns (UserInfoResponse);
}
